# phixiv

./: Cargo.toml  README.md  rustfmt.toml  sample.env  setup_phixiv.yml
.github/workflows/: docker-publish.yml
src/: auth.rs  embed.rs  helper.rs  main.rs  oembed.rs  proxy.rs  state.rs
src/api/: info.rs  mod.rs
src/pixiv/: mod.rs  model.rs
templates/: ugoira.html
