[package]
name = "phixiv"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
askama = "0.12"
axum = { version = "0.7.5", features = ["original-uri", "macros"] }
dotenvy = "0.15"
http = "1"
isbot = "0.1"
itertools = "0.13"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "normalize-path"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
urlencoding = "2.1.3"
headers = "0.4"
axum-extra = { version = "0.9", features = ["typed-header"] }
html2md-rs = "0.9"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
codegen-units = 1
